# Video_Label_Tool

./: .gitignore  README.md  main.py  pyproject.toml
.cache/: last_open.txt
Components/: FileOpenButton.py  LastLoadButton.py  LoadButton.py  MyFrame.py  ReLoadButton.py
component/: InfoFrame.py  MySlider.py  MyText.py  OptionGroup.py
core/: PlayVideo.py  Video.py  app.py  logic.py  ui.py
utils/: __init__.py
